# emotional-friction-detector

./: .gitignore  PROJECT_CONTEXT.md  README.md  mlflow.db  pyproject.toml  requirements.txt
docker/: Dockerfile.fastapi  docker-compose.yml
evaluation/: ab_test_simulator.py  drift_monitor.py  metrics.py
features/: __init__.py  cross_session_features.py  sequence_features.py
intervention/: __init__.py  decision_engine.py  ltv_estimator.py
models/lgbm_churn_risk/: __init__.py  model.py  shap_analysis.py  train.py
models/lgbm_churn_risk/artefacts/shap/: feature_importance_shap.csv
models/lstm_frustration/: __init__.py  evaluate.py  model.py  predict.py  score_sessions.py  train.py
notebooks/: 01_eda.ipynb  01_eda_signal_analysis.ipynb  02_model_training.ipynb  03_intervention_matrix.ipynb  04_ab_results.ipynb  build_01_eda.py  build_02_training.py  build_03_intervention.py  build_04_ab_results.py
scripts/: build_scored_dataset.py
serving/: latency_benchmark.py  main.py  schemas.py
simulator/: __init__.py  delay_distribution.py  generate_dataset.py  session_generator.py  user_profiles.py
tests/: test_decision_engine.py  test_features.py  test_simulator.py
