[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "emotional-friction-detector"
version = "0.1.0"
description = "Real-time pre-churn intervention system for food delivery platforms"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "lightgbm>=4.3",
    "mlflow>=2.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "kafka-python>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pydantic>=2.7",
    "httpx>=0.27",
    "scipy>=1.13",
    "pyarrow>=16.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulator*", "features*", "models*", "intervention*", "serving*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
